src/app/shared/components/pokeball-icon/pokeball-icon.component.scss
@import '../../../../styles/breackpoints';

main {
  position: relative;
  margin-top: 2rem;

  .pokeball1,
  .pokeball2,
  .pokeball3 {
    position: absolute;
    width: 410px;
    height: 400px;
    gap: 0px;
    opacity: 1;

    img {
      width: 100%;
      height: auto;
      filter: brightness(0.9);
    }
  }

  .pokeball1 {
    top: -510px;
    left: -136px;
    z-index: -1;
  }

  .pokeball2 {
    top: -690px;
    left: 790px;
    z-index: -1;
  }

  .pokeball3 {
    top: -130px;
    left: 1186px;
    z-index: -4;
  }

  @media (max-width: $bp-mobile) {
    .pokeball1 {
      width: 142px;
      height: 143px;
      top: -310px;
      left: -52px;
    }
    .pokeball2 {
      width: 142px;
      height: 143px;
      top: -370px;
      left: 180px;
    }
    .pokeball3 {
      width: 142px;
      height: 143px;
      top: -50px;
      left: 291px;
    }
  }
}

